added mobile view, adjusted colors

--- a/index.html
+++ b/index.html
@@ -21,24 +21,22 @@
             </div>
             <div class="main">
                 <div class="locationDiv">
-                    <h1 class="location">
-                        Location:
-                        <h2 id="locationName"></h2>
-                        <img id="weatherImg" src="" />
-                    </h1>
+                    <h1>Location:</h1>
+                    <h2 id="locationName"></h2>
+                    <img id="weatherImg" src="" alt="Weather Icon" />
                 </div>
                 <div class="content">
-                    <div class="conditionDiv">
-                        <h3 id="condition">Condition:</h3>
+                    <div class="infoDiv conditionDiv">
+                        <h2>Condition</h2>
                         <h3 id="conditionData">- -</h3>
                     </div>
-                    <div class="tempDiv">
-                        <h3 id="temp">Temperature:</h3>
+                    <div class="infoDiv tempDiv">
+                        <h2>Temperature</h2>
                         <h3 id="tempDataF">- -</h3>
                         <h3 id="tempDataC">- -</h3>
                     </div>
-                    <div class="windDiv">
-                        <h3 id="wind">Wind Speed:</h3>
+                    <div class="infoDiv windDiv">
+                        <h2>Wind Speed</h2>
                         <h3 id="windDataUS">- -</h3>
                         <h3 id="windDataEU">- -</h3>
                     </div>
