adjusted mobile view experience

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             </div>
             <div class="main">
                 <div class="locationDiv">
-                    <h1>Location:</h1>
+                    <h1>Location</h1>
                     <h2 id="locationName"></h2>
-                    <img id="weatherImg" src="" alt="Weather Icon" />
+                    <img id="weatherImg" src="" />
                 </div>
                 <div class="content">
                     <div class="infoDiv conditionDiv">
